fix:(fix alignment)

--- a/src/Components/WhoAreWe.module.css
+++ b/src/Components/WhoAreWe.module.css
@@ -29,7 +29,8 @@
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.3);
   width: 592px;
   height: auto;
-  border-radius: 10px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
 }
 
 .text_container5 p {
